compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_record_type_field.snap
---
source: tests/fixtures.rs
assertion_line: 1275
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_record_type_field.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate record type field
   ╭─[tests/fixtures/diagnostics/types/duplicate_record_type_field.ml:1:34]
 1 │ type span = { start: i64, start: i64 }
   ·                                  ─┬─
   ·                                   ╰── this field is already declared on the record type
 2 │ 
   ╰────
  help: remove the duplicate field or choose a unique field name
